I found my files! :heart:

--- a/diplomarbeit/abstract.tex
+++ b/diplomarbeit/abstract.tex
@@ -1,14 +1,14 @@
-\section*{Kurzfassung} \todo{Kontrolle}
+\section*{Kurzfassung}
 
-Die Zielsetzung des Projekt BestShift, entwickelt von Schülern der Abteilung für Informationstechnologie am TGM, ist die Sammlung, Analyse und Verwendung von Daten, die für einen Fahrer eines Kraftfahrzeugs interessant sein könnten. Durch die zwei Datenquellen, das Auto selber, mit welchem durch den Diagnostikport (OBD-II) kommuniziert wird, und dem selbst entwickelte Car-PC, werden passende Darstellungen geboten. Durch die Kombinationen der Hauptfeatures, welche in unseren Applikationen implementiert sind, Schaltvorschlag, Fahrgastkomfortanalyse, und Verbrauchsanalyse, kann man durch numerisch wiederlegte Werte, angeben wie gut der Fahrstil eines Fahrers ist.
+Die Zielsetzung des Projekt BestShift, entwickelt von Schülern der Abteilung für Informationstechnologie am TGM, ist die Sammlung, Analyse und Verwendung von Daten, die für einen Fahrer eines Kraftfahrzeugs interessant sein könnten. Durch die zwei Datenquellen, das Auto selbst, mit welchem durch den Diagnostikport (OBD-II) kommuniziert wird, und dem selbst entwickelte Car-PC, werden passende Darstellungen geboten. Durch die Kombinationen der Hauptfeatures, welche in unseren Applikationen implementiert sind, Schaltvorschlag, Fahrgastkomfortanalyse, und Verbrauchsanalyse, können numerisch wiederlegte Werte angegeben werden, welche besagen wie gut der Fahrstil eines Fahrers ist.
 
 Die modulare Umsetzung des Car-PCs sorgt dafür, dass zu jedem Zeitpunkt ein neuer Sensor hinzugefügt werden kann. Zusätzlich dazu dient der Car-PC als ein Medium der Zwischenspeicherung und Erstverarbeitung der relevanten Information für die späteren Anwendungen durch die Applikationen. 
 
 Präzise, einfach zu verstehende Darstellungen und Features, die den Fahrstil der Nutzenden von BestShift verbessern können, sind mittels zwei Applikationen realisiert worden, wobei diese für unterschiedliche Szenarien konzipiert sind. 
 
-Die erste Applikation ist für den mobilen Gebrauch konzipiert, und ist für Android Smartphones implementiert. Die Android Applikation sammelt die benötigten Daten direkt vom Car-PC und kann somit beinahe Echtzeit-Darstellung erzeugen. Die Android-App ist außerdem für die Speicherung der Sensordaten auf den BestShift Server zuständig. Von unserem Server aus kann dann die zweite Applikation, die Web-Applikation, die benötigten Ressourcen laden und weiter verarbeiten. Es ist zu erwähnen, dass die Web-App als die primäre Speicherungsstelle dient – alle Fahrten des Fahrers werden hier gespeichert und dieser kann sich alle retrospektiv ansehen. Zusätzlich dazu ist es möglich die Bewertung mit Freunden und Familie, mittels der integrierten Social Media Anbindung, zu teilen. 
+Die erste Applikation ist für den mobilen Gebrauch konzipiert, und ist für Android Smartphones implementiert. Die Android Applikation sammelt die benötigten Daten direkt vom Car-PC und kann somit beinahe Echtzeit-Darstellung erzeugen. Die Android-App ist außerdem für die Speicherung der Sensordaten auf den BestShift Server zuständig. Von unserem Server aus kann dann die zweite Applikation, die Web-Applikation, die benötigten Ressourcen laden und weiter verarbeiten. Es ist zu erwähnen, dass die Web-App als die primäre Speicherungsstelle dient – alle Fahrten des Fahrers sind hier sichtbar und dieser kann sich alle retrospektiv ansehen. Zusätzlich dazu ist es möglich die Bewertung mit Freunden und Familie, mittels der integrierten Social Media Anbindung, zu teilen. 
 
-\section*{Abstract} \todo{Kontrolle}
+\section*{Abstract}
 
 The Project BestShift, developed by students from the department of Information Technology at the TGM, has the main goals of extracting, analysing and processing data relevant for drivers of automobiles. Through the two main data sources, the car itself (interfaced through the diagnostics port) as well as the self-developed Car-PC, an accurate representation of how well a driver is driving can be given. BestShift’s three main features, realized in both Applications, are a gear-shift-recommendation, an analysis of how comfortable the drive is, as well as a fuel consumption analysis. However, through a combination of the features, one can very easily determinate if a driver’s driving style is environmentally friendly.
 
