--- a/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
+++ b/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
@@ -1,8 +1,7 @@
-\lfoot{Autor: Hüseyin Bozkurt}
 \subsection{Umweltbelastung durch \ce{CO2} Ausstoß}
+\lfoot{Autor: Hüseyin Bozkurt}
 
-
-\textbf{Definition und Entstehung\newline}
+\subsubsection{Definition und Entstehung}
 Kohlenstoffdioxid (\ce{CO2}) ist ein unsichtbares, geruchsloses Gas bestehend aus einem Kohlenstoff und zwei Sauerstoff-Atomen. 
 In jedem Stoffwechselprozess spielt Kohlenstoffdioxid eine wichtige Rolle, da beispielsweise der Mensch \ce{CO2} ausatmet. 
 Bei vielen Energiegewinnungsverfahren werden durch Verbrennung Energien freigesetzt, die als Nebenprodukt Kohlenstoff produzieren. 
@@ -24,13 +23,9 @@ zu diesem Zeitpunkt mehr Schadstoffe produziert als nötig.
 Mit diesem Diplomprojekt, wollen wir Fahrenden ein Werkzeug in die Hand geben, ihren \ce{CO2}-Ausstoß während und nach der Fahrt
 einschätzen zu können. Damit haben sie die Möglichkeit ihre Fahrweise in Hinblick auf den \ce{CO2}-Ausstoß zu verbessern.
 
-\begin{wrapfigure}{r}{0.6\textwidth}
-    \centering
-    \includegraphics[width=0.6\textwidth]{images/treibhaus1}
-    \caption{Der Treibhauseffekt \cite{BOZH.ch1-co2-umwelt.treibhaus1}}
-\end{wrapfigure}
+\clearpage
 
-\textbf{Treibhauseffekt\newline}
+\subsubsection{Treibhauseffekt}
 \ce{CO2} gilt als eines der häufigsten Treibhausgase.
 Das Kohlenstoffdioxid steigt bis zur Atmosphäre auf und bildet dort eine \textit{Mauer}.
 Sonnenstrahlen können zwar ohne weiteres durch, doch nicht so leicht wieder raus. Das heisst, dass die Sonnenstrahlen,
@@ -38,10 +33,17 @@ die von der Erdoberfläche wieder zurück in den Weltraum reflektiert werden sol
 Der Treibhauseffekt gilt als eine der Hauptursachen für den Klimawandel, welcher drastische Folgen für Natur, Tiere und Menschen hat. 
 Zu viel \ce{CO2} in der Atmosphäre bringt unter anderem das Abschmelzen von Gletschern, 
 den Anstieg der Meerestemperatur, den Anstieg des Meeresspiegels, 
-Aussterben von Pflanzen und Tieren und Wetterphänomene wie zum Beispiel sehr warme Winter, Stürme etc.\nextline
+Aussterben von Pflanzen und Tieren und Wetterphänomene wie zum Beispiel sehr warme Winter, Stürme etc.
+
+\begin{figure}[!htb]\centering
+	\includegraphics[width=0.6\textwidth]{images/treibhaus1}
+	\caption{Der Treibhauseffekt \cite{BOZH.ch1-co2-umwelt.treibhaus1}}
+\end{figure}
  
-\textbf{Das Kyoto-Protokoll\newline}
+\subsubsection{Das Kyoto-Protokoll}
 Im Rahmen des Kyoto-Protokolls haben sich viele westliche Staaten zu einer Reduktion der Treibhausgase verpflichtet. 
 Dieses Protokoll war der Startschuss für die Suche nach erneuerbaren Energien. 
 Anfang 2015 sind Gesetzesregelungen in Kraft getreten, die den Durchschnittsverbrauch eines PKW auf 130g/\ce{CO2} pro kilometer limitierten. 
 Bis 2020 soll dieses Limit auf 95g/CO2 pro kilometer herunter gesetzt werden.
+
+\clearpage
