--- a/diplomarbeit/sections/ch1_introduction/main.tex
+++ b/diplomarbeit/sections/ch1_introduction/main.tex
@@ -15,10 +15,11 @@ Abbildung \ref{fig:konzept1} zeigt wie die einzelnen Komponenten des BestShift S
 	\item Realisierung eines Car-PC für einen größeren Pool an Informationen
 	\item Darstellung der Hauptfeatures: Schaltvorschlags, Fahrkomforts und Schadstoßes in einer Android Applikation und einer Web-Applikation
 	\item Retrospektive Analyse und Vergleich der Hauptfeatures in der Web-App
-	\item Sharing Möglichkeiten für die Analyse seiner Fahrt
+	\item Sharing Möglichkeiten für die Analyse einer Fahrt
 \end{itemize}
+
+In der folgenden Sektion werden die Probleme beschrieben, welche durch das System gelöst werden sollen und welche Methoden dafür verwendet wurden. Zusätzlich dazu wird auch ein Vergleich zwischen anderen etablierten Konzepten, bzw. umgesetzten Systestemen und dem Projekt BestShift Für eine allgemeine Beschreibung des Projekts, siehe Sektion \ref{sec:projektbestshift}.
 
 \input{sections/ch1_introduction/fahrstil-analyse.tex}
 \input{sections/ch1_introduction/co2-umwelt.tex}
 \input{sections/ch1_introduction/bestshift.tex}
-\input{sections/ch1_introduction/projekt-management.tex}
