--- a/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/dbms.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/dbms.tex
@@ -106,11 +106,12 @@ Grundsätzlich gibt es vier große Gruppen von NoSQL Datenbanken \cite{MELD.CH2-
 \end{itemize}
 \clearpage
 
-Hier kann man nochmals jene NoSQL Datenbanken betrachten und vergleichen die zum haufigsten Zeitpunkt am meisten verwendet werden.
+Es gibt eine unmenge an Implementierung für NoSQL-Datenbanken. In der Tabelle \ref{fig:nosqlcomp} werden die DBMS mit dem größten Martanteil gezeigt.
 
 \begin{figure}[!htb]\centering
 	\includegraphics[width=1\textwidth]{images/noSQLComp}
-	\caption{Vergleich von gängigen NoSQL Datenbanken\cite{MELD.CH2-dbms.compNoSQL}}
+	\caption{Vergleich von gängigen NoSQL Datenbanken \cite{MELD.CH2-dbms.compNoSQL}}
+	\label{fig:nosqlcomp}
 \end{figure}
 
 
