--- a/diplomarbeit/sections/ch2_technische_grundlagen/main.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/main.tex
@@ -1,8 +1,10 @@
 \section{Technische Grundlagen}
 \label{sec:techngrund}
 
+In der folgenden Sektion wird auf das Wissen eingenangen, welches benötigt wurde um das System zu implementieren. 
+
 \subsection{Fahrzeugtechnik}
-\comment{SIMR: Kapitelnamen - fixed?}
+Das Entwicklungsteam des Projekts stammt aus der Abteilung für Informationstechnologie des TGMs, daher hatten wir die benötigten Grundkenntnisse von Fahrzeugtechnik nicht. Im Verlauf des Projekts wurde durch die Hilfe von Prof. Dipl.-Ing. Heinz Neuburger eine Implementierung entwickelt, mit welcher die benötigten Sensordaten aus dem Auto verwendbar gemacht worden sind.
 \input{sections/ch2_technische_grundlagen/can-bus/obd2.tex}
 \input{sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex}
 
