--- a/diplomarbeit/sections/ch3_implementierung/android-app.tex
+++ b/diplomarbeit/sections/ch3_implementierung/android-app.tex
@@ -1,5 +1,6 @@
 \lfoot{Autor: Faiku Fitim}
 \subsection{Android App}
+\label{subsec:androidapp}
 
 Die Android App wurde mittels Java erstellt wobei als Programmieroberfläche Android Studio verwendet wurde.
 Für jede Klasse wurde ein XML Layout als View generiert, wodurch eine Verbindung zwischen Code und Layout geschaffen wurde.
@@ -62,13 +63,8 @@ MPAndroidChart ist eine Libary mittels der 8 verschieden Graphen erzeugt werden 
 Das Liniendiagramm wurde mittels der MPAndroidchart Libary erstellt.
 
 
-
-
 \lstinputlisting[caption=Liniendiagramm Beispiel, style=javastyle]{code/Beschleunigungskraefte.java}
 
-
-Das Liniendiagramm wurde mittels der MPAndroidChart Libary erstellt. Die Linien werden Blau gezeichnet und die einzelnen Punkte schwarz. Das Liniendiagramm wurde zusätzlich zum Kammschen Kreis erstellt, da für den Endbenutzer die Längsbeschleunigung einen größeren Stellenwert hat, da wir in der Stadt viel mehr in die Länge beschleunigen, als in Kurven.
- \newline
 \begin{figure}[!tbp]
  	\centering
  	\begin{minipage}[b]{0.4\textwidth}
@@ -82,5 +78,4 @@ Das Liniendiagramm wurde mittels der MPAndroidChart Libary erstellt. Die Linien 
  	\end{minipage}
 \end{figure}
  
-
 \clearpage % DO NOT REMOVE
