--- a/diplomarbeit/sections/ch3_implementierung/carpc.tex
+++ b/diplomarbeit/sections/ch3_implementierung/carpc.tex
@@ -1,5 +1,6 @@
 \lfoot{Autor: Tobias Perny}
 \subsection{Car-PC}
+\label{subsec:carpc}
 
 Da nicht alle notwendigen Daten direkt aus der OBDII Schnittstelle ausgelesen werden können, wird ein PC gebaut, welcher in die Mittelkonsole eines KFZ integriert werden kann.
 Dieser PC soll einen Single-Board PC und Sensoren enthalten, welche eben diese Daten über eine Bluetooth Verbindung an ein Smartphone senden kann.
