--- a/diplomarbeit/sections/ch3_implementierung/daten-management-analyse/main.tex
+++ b/diplomarbeit/sections/ch3_implementierung/daten-management-analyse/main.tex
@@ -2,6 +2,8 @@
 \subsection{Datenmanagement und Datenanalyse}
 \label{subsec:datenmanagementimpl}
 
+In dieser Sektion wird die konkrete Implementierung der Datenkommunikation zwischen den Komponenten beschrieben.
+
 \input{sections/ch3_implementierung/daten-management-analyse/os.tex}
 \input{sections/ch3_implementierung/daten-management-analyse/redis.tex}
 \input{sections/ch3_implementierung/daten-management-analyse/sensordatensammlung.tex}
