--- a/diplomarbeit/sections/ch3_implementierung/fahrkomfortanalyse.tex
+++ b/diplomarbeit/sections/ch3_implementierung/fahrkomfortanalyse.tex
@@ -1,5 +1,6 @@
 \lfoot{Autor: Fitim Faiku}
-\subsection{Fahrkomfortanalyse}
+\subsection{Fahrgastkomfortanalyse}
+\label{subsec:fahrgastkomfortanalyse}
 
 
 Autofahrten werden durch die Bequemlichkeit der Fahrt bewertet. 
