--- a/diplomarbeit/sections/ch3_implementierung/schaltvorschlag.tex
+++ b/diplomarbeit/sections/ch3_implementierung/schaltvorschlag.tex
@@ -1,5 +1,6 @@
 \lfoot{Autor: Raphael Simsek}
 \subsection{Schaltvorschlag}
+\label{subsec:schaltvorschlag}
 
 \subsubsection{Prototyp}
 Für den Prototyp wurde zuerst überlegt, wie man am den Schaltvorschlag umsetzen kann. Dafür wurden die Überlegungen aus dem Kapitel 2.1.2 Motorwirkungsgrad herangezogen:
