--- a/diplomarbeit/sections/ch3_implementierung/verbrauchsanalyse.tex
+++ b/diplomarbeit/sections/ch3_implementierung/verbrauchsanalyse.tex
@@ -1,5 +1,6 @@
 \lfoot{Autor: Hüseyin Bozkurt}
 \subsection{Verbrauchsanalyse}
+\label{subsec:verbrauchsanalyse}
 
 Die Verbrauchsanalyse ist die Darstellung des momentanen Schadstoffausstoßes.
 Die dazugehörigen Werte kommen aus der OBD-II Schnittstelle, genauer aus dem PID 5e.
