--- a/diplomarbeit/sections/ch3_implementierung/web-app/design.tex
+++ b/diplomarbeit/sections/ch3_implementierung/web-app/design.tex
@@ -2,11 +2,11 @@
 \lfoot{Autor: Daniel Melichar}
 \label{subsec:WAppDesign}
 
-Beim erstellen eines User Interfaces geht es primär darum visuell anspruchsvolle Layouts zu erstellen die es dem User ermöglichen sollen die Applikation einfach zu bedienen. Es ist aber zu beachten, dass es nicht nur um das Aussehen geht, sondern auch darum wie schnell man sich zurecht findet. Prinzipiell ist es unmöglich ein Design zu erstellen welches jedem User gefällt, dennoch sollte man sich an gewisse Standards halten.
+Beim erstellen eines User Interfaces geht es primär darum visuell anspruchsvolle Layouts zu erstellen, welche es dem User ermöglichen die Applikation einfach zu bedienen. Es ist aber zu beachten, dass es nicht nur um das Aussehen geht, sondern auch darum wie schnell ein User sich zurecht findet. Prinzipiell ist es unmöglich ein Design zu erstellen welches jedem User gefällt, dennoch sollten gewisse Designkonzepte beachter werden \cite{MELD.CH3-web-app.ui1}\cite{MELD.CH3-web-app.ui2}.
 
 \begin{description}
 \item[Interaction Design]
-beschreibt wie man direkt mit den, vom User erstellten, Dialogen und Anfragen umgeht. Ein Verständnis von Kommunikation zwischen Mensch und Maschine ist hier essential. Man muss voraussagen können wie der User mit dem System umgeht und vorab Maßnahmen dafür einpflegen.
+beschreibt die Verarbeitung von den User Dialogen und Anfragen. Ein Verständnis von Kommunikation zwischen Mensch und Maschine ist hier essential. Voraussagen bezüglich des Umgangs zwischen dem User und dem System müssen erstellt und vorab Maßnahmen dafür implementiert werden.
 
 \item[Visual Design]
 beschreibt die Ästhetik von Webseiten und deren Materialien mittels den verwendeten Bildern, Farben und Schriftarten. Die Ästhetik soll aber nicht von den eigentlichen Funktionen ablenken, sondern eher die User motivieren diese zu verwenden.
@@ -18,21 +18,17 @@ beschreibt die Art und Weise in welcher Information angezeigt wird. Durch geziel
 \textbf{Prinzipien von gutem Web-Design}
 \begin{description}
 \item[Möglichst intuitiv -]
-Grundsätzlich muss man in diesem Fall davon ausgehen, dass eine bewusste Entscheidung Users nicht das ist was man will. Es muss sofort ersichtlich sein, welche die nächsten Schritte sind und die Website selbsterklärend ist. Durch Einsatz von Animationen, und anderen visuellen Stichwörtern, kann ein Schwerpunkt auf gewisse Elemente gerichtet werden
+Grundsätzlich sollte der User nicht lange überlegen müssen, sondern sofort erkennen können, was als nächstes zu tun ist. Durch Einsatz von Animationen, und anderen visuellen Stichwörtern, kann ein Schwerpunkt auf gewisse Elemente gerichtet werden
 
 \item[Geringe Wartezeiten -]
 Je mehr man sich an das System gewöhnen und lernen muss wie es funktioniert, desto geringer ist der Anteil der User die sich diese Arbeit auch wirklich tun wollen. Für Personen, welche die Webseite zum ersten mal besuchen, muss sofort ersichtlich sein wieso sie den Service abonnieren sollen.
 
 \item[Effiziente Texte und andere Inhalte -]
-Das Schreiben von Texten ist anders als das schreiben für den Druck. Man sollte den Text möglichst konsequent und logisch anfertigen. Die Verwendung von Überschriften, fetten oder kursiven Texten spielt eine wichtige rolle. Auch die Wahl der Schriftart ist eine wichtige, da es eine unterschiedliche Wirkung auf die verschiedenen User hat.
+Das Schreiben von Texten ist anders als das schreiben für den Druck. Der Text sollte möglichst konsequent und logisch angefertigt sein. Die Verwendung von Überschriften, fetten oder kursiven Texten spielt eine wichtige Rolle. Auch die Wahl der Schriftart ist ein wichtiger Aspekt, da diese eine unterschiedliche Wirkung auf die verschiedenen User hat.
 
 \item[Das nötigste Verwenden -]
-Alles was keine Funktion hat, muss und darf auch nicht auf der Webseite sein – sie soll möglichst simple sein. Komplexität sorgt nur für Verwirrung und bewirkt Frustration.
+Alles was keine Funktion hat, muss und darf auch nicht auf der Webseite sein – sie soll möglichst simpel sein. Komplexität sorgt nur für Verwirrung und bewirkt Frustration.
 
 \item[Verwendung von White-Space -]
-Die Verwendung von leeren Räumen zwischen dem eigentlichen Inhalt einer Webseite sorgt für eine gewisse Ruhephase beim User. Es bewirkt eine minimale Pause, die aber eine große Wirkung hat. Durch den Einsatz dieser Pause erlaubt man dem User das gelesene, oder gesehene, zunächst mal zu verarbeiten bevor man den nächsten Schritt wagt.
+Die Verwendung von leeren Räumen zwischen dem eigentlichen Inhalt einer Webseite sorgt für eine gewisse Ruhephase beim User. Es bewirkt eine minimale Pause, die aber eine große Wirkung hat. Durch den Einsatz dieser Pause erlaubt man dem User das gelesene, oder gesehene, zunächst mal zu verarbeiten bevor der nächsten Schritt gewagt werden kann.
 \end{description}
-
-\todo{MELD: PSDs einbinden?}
-
-\clearpage
