--- a/diplomarbeit/sections/ch3_implementierung/web-app/main.tex
+++ b/diplomarbeit/sections/ch3_implementierung/web-app/main.tex
@@ -1,8 +1,7 @@
-\subsection{Web-App}
+\subsection{Web-Applikation}
+\label{subsec:webapp}
 
-Uns war von Anfang an klar, dass die komplette Umsetzung des gesamten Systems nicht möglich sein wird. Unser Fokus lag auf die Implementierung des Car-PC, der Android-App, und alle Komponenten die dazwischen sind. Dennoch war es uns ein großes Anliegen bereits einige Arbeitsschritte für die Web-Applikation durchzuführen, da diese als lukrativste betrachtet werden kann. 
-
-Aufgrund dessen haben wir uns entschlossen zumindest die folgenden Arbeiten für die Web-App durchzuführen. 
+Die Web-App hat das Ziel der nachträglichen Darstellung einer oder mehrerer Fahrten - hierfür bezieht sie die benötigte Information aus den Servern. Für die Web-App wurden grundsätzlich folgende Arbeiten getätigt:
 
 \begin{itemize}
 \item Erstellung eines Designs und Konzept des User Interface
@@ -10,8 +9,6 @@ Aufgrund dessen haben wir uns entschlossen zumindest die folgenden Arbeiten für
 \item Erstellung von Plattform und API Standards
 \item Prototypische Umsetzung der Web-App
 \end{itemize}
-
-Im weiteren Verlauf des Projekts muss die Web-App sicherlich mit großem Aufwand betrieben werden – es könnte sogar als ein eigenes Projekt betrachtet werden. Durch unsere getätigte Arbeit ist der dafür benötigte Aufwand aber durchaus geringer.
 
 \input{sections/ch3_implementierung/web-app/design.tex}
 \input{sections/ch3_implementierung/web-app/evaluierung.tex}
