--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -245,6 +245,86 @@
     note = {Accessed on 30.03.2016}
 }
 
+@misc{MELD.CH3-web-app.ui1, 
+    author = {Suzanne Martin},
+    year = {1993},
+    title = {Effective Visual Communication for Graphical User Interfaces},
+    howpublished = "\url{http://web.cs.wpi.edu/~matt/courses/cs563/talks/smartin/int_design.html}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-web-app.ui2, 
+    author = {Google Inc.},
+    year = {2016},
+    title = {Material design},
+    howpublished = "\url{https://www.google.com/design/spec/material-design/introduction.html}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-web-app.web2, 
+    author = {Matt Bower},
+    year = {2015},
+    title = {A Typology of Web 2.0 Learning Technologies},
+    howpublished = "\url{https://net.educause.edu/ir/library/pdf/csd6280.pdf}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-web-app.html, 
+    author = {WHATWG Community},
+    year = {2016},
+    title = {HTML - Living Standard},
+    howpublished = "\url{https://html.spec.whatwg.org/multipage/}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-web-app.css2, 
+    author = {HackHands Inc.},
+    year = {2016},
+    title = {70 Expert Ideas For Better CSS Coding},
+    howpublished = "\url{https://hackhands.com/70-Expert-Ideas-For-Better-CSS-Coding/}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-web-app.css3, 
+    author = {The CSSDB Community},
+    year = {2016},
+    title = {Popular CSS Libraries},
+    howpublished = "\url{http://cssdb.co}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-web-app.js1, 
+    author = {Nodejs Foundation},
+    year = {2016},
+    title = {Nodejs Webseite},
+    howpublished = "\url{https://nodejs.org/en/}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-web-app.js2, 
+    author = {Dan Rowinski},
+    year = {2015},
+    title = {JavaScript Is Eating The World},
+    howpublished = "\url{http://arc.applause.com/2015/11/06/javascript-is-eating-the-world/}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-web-app.js3, 
+    author = {Salsita Software},
+    year = {2014},
+    title = {The definitive source of the best JavaScript libraries, frameworks, and plugins},
+    howpublished = "\url{https://www.javascripting.com}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-web-app.js4, 
+    author = {Darryl Nelson},
+    year = {2013},
+    title = {Next Gen Web Architecture for the Cloud Era},
+    howpublished = "\url{https://www.sei.cmu.edu/library/assets/presentations/nelson-saturn2013.pdf}",
+    note = {Accessed on 30.03.2016}
+}
+
 @misc{SIMR.CH1-Fahrstil-Analyse.CarnotWirkungsgrad,
     author = {Prof. Dr. Karl-Heiz Kampert},
     title = {Kreisprozesse},
