--- a/diplomarbeit/special/preamble.tex
+++ b/diplomarbeit/special/preamble.tex
@@ -47,8 +47,8 @@
 % Comments and notes
 
 \newtoggle{devel}
-%\toggletrue{devel}
-\togglefalse{devel}
+\toggletrue{devel}
+%\togglefalse{devel}
 
 \iftoggle{devel} {
 	\newcommand{\comment}[1]{{\bf \colorbox{yellow}{\color{black}#1}}\nextline}
