--- a/diplomarbeit/sections/ch3_implementierung/web-app/evaluierung.tex
+++ b/diplomarbeit/sections/ch3_implementierung/web-app/evaluierung.tex
@@ -1,20 +1,18 @@
 \subsubsection{Technologien und Modelle}
 \lfoot{Autor: Daniel Melichar}
 
-Wie bereits erwähnt war es von Anfang an klar, dass die komplette Umsetzung der Web-App den Rahmen und benötigten Zeitaufwand um einiges sprengen würde. Es mussten also Modelle und Technologien gefunden werden, die es ermöglichen ein System möglichst modular zu gestalten.
-
-Grundsätzlich besteht jegliche Website (bei Web2.0) aus den folgenden vier Technologien.
+Die Technologien und Konzepte der Web-Applikation sollen den benötigten Aufwand bei Weiterentwicklung der Applikation, sowie beim hinzufügen von neuen Features, möglichst reduzieren. Grundsätzlich besteht jegliche Website (bei Web2.0 \cite{MELD.CH3-web-app.web2}) aus den folgenden Technologien.
 
 \begin{description}
-\item[HTML Markup\newline] definiert den Inhalt eines Dokuments und gibt eine Struktur vor mittels dem Einsatz von Sektionen, Überschriften, Paragraphe, Listen, Menüs, und Formulare.
+\item[HTML Markup \newline] definiert den Inhalt eines Dokuments und gibt eine Struktur vor mittels dem Einsatz von Sektionen, Überschriften, Paragraphe, Listen, Menüs, und Formulare \cite{MELD.CH3-web-app.html}.
 
 Eine konsequente, saubere, und ersichtliche Struktur ist wichtig da durch den Einsatz von Ankern \textit{(engl.: Hooks)} die weitere Verarbeitung durch CSS und JavaScript passiert. Die Struktur hat auch eine große Wirkung auf die Flexibilität und zuverlässige Bereitstellung der Website.
 
-Durch die Verwendung von Templates, und Standards in einem Projekt, ist es einfacher gewisse Teile einer Web Applikation mehrmals zu verwenden ohne die selbe Arbeit nochmals zu tätigen.
+Durch die Verwendung von Templates, und Standards in einem Projekt, ist es einfacher gewisse Teile einer Web Applikation mehrmals zu verwenden ohne die selbe Arbeit nochmals zu tätigen (siehe Seite \pageref{subsec:jsframeworks}).
 
-\item[Cascading Style Sheets\newline] oder CSS, ist jener Teil einer Applikation in welcher die visuelle Repräsentation und design Regeln beschrieben werden. Ein gut geschriebenes CSS verwendet das kaskadenförmige Prinzip der Sprache – generelle Regeln werden zuerst inkludiert und danach die überschreibenden für spezifische Instanzen.
+\item[Cascading Style Sheets\newline] oder CSS, ist jener Teil einer Applikation in welcher die visuelle Repräsentation und Design Regeln beschrieben werden. Ein gut geschriebenes CSS verwendet das kaskadenförmige Prinzip der Sprache – generelle Regeln werden zuerst inkludiert und danach die überschreibenden für spezifische Instanzen \cite{MELD.CH3-web-app.css}.
 
-Es ist sehr einfach mit CSS inkonsistenten und unnötigen Code zu schreiben, welcher dann so fragil ist, so dass es auf der Webseite immer wieder kleine Unterschiede gibt. Aufgrund dessen sollte CSS immer 
+Es ist sehr einfach mit CSS inkonsistenten und unnötigen Code zu schreiben, welcher dann so fragil ist, so dass es auf der Webseite immer wieder kleine Unterschiede gibt. Aufgrund dessen sollte CSS immer \cite{MELD.CH3-web-app.css2}
 \begin{enumerate}
 \item einfach zu Verwalten sein
 \item klar ersichtliche Patterns haben
@@ -25,18 +23,18 @@ Es ist sehr einfach mit CSS inkonsistenten und unnötigen Code zu schreiben, wel
 \item Unterscheiden zwischen globalen und spezifischen Styles
 \end{enumerate}
 
-Bevor es an das eigentliche Erstellen von Code geht sollte man vorab immer das vorgegebene Design überprüfen, ein technisches Konzept erstellen und hierbei vor allem auf logische Verknüpfungen im Code achten. Das bedeutet konkret, dass man die Styles des Kunden (bzw. deren Corporate Identity) in die Website einplant, die Basis der Typographie der Webseite erstellt, Styles für die komplette Webseite, und danach für einzelne Sektionen, erstellt.
+Bevor es an das eigentliche Erstellen von Code geht sollte man vorab immer das vorgegebene Design überprüfen, ein technisches Konzept erstellen und hierbei vor allem auf logische Verknüpfungen im Code achten. Das bedeutet konkret, dass die Styles des Kunden (bzw. deren Corporate Identity) in die Webseite eingeplant, die Basis der Typographie der Webseite erstellt, und Styles für die komplette Webseite bzw für spezifische Sektionen erstellt werden müssen.
 
 \textbf{Tools und Frameworks\newline}
-In manchen Fällen ist die Verwendung von third party libraries sehr hilfreich. Diese sollten aber aus einem guten Grund gewällt werden. Auch hier gibt es wiederum viele Arten von Tools die man verwenden kann. Einige kann man als eigene, bessere Sprachen ansehen welche dann einfach zu CSS umgewandelt werden. Andere reduzieren den bereits vorhanden Code auf das Minimum.
+In manchen Fällen ist die Verwendung von CSS-Libariessehr hilfreich. Diese sollten aber aus einem guten Grund gewällt werden. Auch hier gibt es wiederum viele Arten von Tools die Verwendet werden können \cite{MELD.CH3-web-app.css3}. Einige können als eigene, bessere Sprachen angesehen werden, welche sich dann einfach zu CSS konvertieren, Andere reduzieren den bereits vorhanden Code auf das Minimum.
 
-Vorgefertigte UI Komponenten oder CSS Frameworks können ebenfalls sehr hilfreich sein, aber auch hier gilt: nur verwenden, wenn wirklich notwendig. Wiederum gibt es verschiedene Kategorien von Frameworks die für verschiedenstes verwendet werden können: UI Komponenten oder Widget libraries (z.B. Bootstrap, jQuery UI), Grid Systems, Typographie Anpassungen, Normalisierung von Code.
+Vorgefertigte UI Komponenten oder CSS Frameworks können ebenfalls sehr hilfreich sein \cite{MELD.CH3-web-app.css3}, aber auch hier gilt: nur verwenden, wenn wirklich notwendig. Wiederum gibt es verschiedene Kategorien von Frameworks die für verschiedenstes verwendet werden können: UI Komponenten oder Widget libraries (z.B. Bootstrap, jQuery UI), Grid Systems, Typographie Anpassungen, Normalisierung von Code.
 
 
 \item[JavaScript\newline]
-beschreibt zusätzliche Verhaltensweisen, Features und Funktionalität welche normalerweise nicht von Web Browsern durch den Einsatz von CSS du HTML unterstützt werden. In den letzten Jahren hat JavaScript einen enormen Boom erhalten. Dies ist aufgrund der immer größeren Anzahl an Features, schnelleren Browsern und Server Laufzeitumgebungen wie Node.js. 
+beschreibt zusätzliche Verhaltensweisen, Features und Funktionalität welche normalerweise nicht von Web Browsern durch den Einsatz von CSS du HTML unterstützt werden. In den letzten Jahren hat JavaScript einen enormen Boom erhalten \cite{MELD.CH3-web-app.js2}. Dies ist aufgrund der immer größeren Anzahl an Features, schnelleren Browsern und Server Laufzeitumgebungen wie Node.js \cite{MELD.CH3-web-app.js1}. 
 
-Es gibt mittlerweile für beinahe jede Komponente einer Website die man sich vorstellen kann eine JavaScript Library oder Framework. Man sollte dennoch nur dann JavaScript verwenden, wenn keine andere Möglichkeit existiert.  Sollte der Fall eintreten, und es wirklich keine native Funktion durch CSS/HTML geben, muss die JavaScript Komponente auf Performance getestet werden. Auch hier gilt es dann möglichst schnellen, effizienten und performanten, wiederverwendbaren Code zu generieren. 
+Es gibt mittlerweile für beinahe jede Komponente einer Website die man sich vorstellen kann eine JavaScript Library oder Framework \cite{MELD.CH3-web-app.js3}. Man sollte dennoch nur dann JavaScript verwenden, wenn keine andere Möglichkeit existiert.  Sollte der Fall eintreten, und es wirklich keine native Funktion durch CSS/HTML geben, muss die JavaScript Komponente auf Performance getestet werden. Auch hier gilt es dann möglichst schnellen, effizienten und performanten, wiederverwendbaren Code zu generieren. 
 
 Für die Auswahl von Third Party Projekten oder Code sollten folgende Punkte bei der Überlegung eingebunden werden:
 \begin{enumerate}
@@ -47,7 +45,7 @@ Für die Auswahl von Third Party Projekten oder Code sollten folgende Punkte bei
 \item Testung auf verschiedensten Plattformen und Geräten
 \end{enumerate}
 
-Viel zu oft vergessen Entwickler von Web-Applikationen das Gesamtkonzept und fokussieren sich nur auf einen geringen Teil - \textit{„Ich füge einfach ein plugin hinzu!“} ist nicht immer eine gute Lösung. Deshalb sollte JavaScript hauptsächlich für die folgenden Komponenten und/oder Eigenschaften verwendet werden
+Viel zu oft vergessen Entwickler von Web-Applikationen das Gesamtkonzept und fokussieren sich nur auf einen geringen Teil - eine Ansammlung an Plugins ist keine gute Lösung. Deshalb sollte JavaScript hauptsächlich für die folgenden Komponenten und/oder Eigenschaften verwendet werden:
 \begin{enumerate}
 \item Document Object Model (DOM) Manipulation
 \item Ajax Validation
@@ -58,10 +56,9 @@ Viel zu oft vergessen Entwickler von Web-Applikationen das Gesamtkonzept und fok
 \end{enumerate}
 \end{description}
 
-\clearpage
-
 \textbf{Verwendung und Anwendung\newline}
-Die folgenden Frameworks und Libaries wurden in Betracht gezogen. Letzendlich haben wir uns dann für \textbf{Anglar 2.0} entschlossen da wir bereits ein wenig Erfahrung mit diesem Framework hatten und somit das negative für uns nicht relevant war. Mit Hilfe des Frameworks war es möglich einen Prototype zu erstellen und die weiteren Bedürfnisse der Web-App zu evaluieren.
+\label{subsec:jsframeworks}
+Für die konkrete Umsetzung einer Web-Applikation wird in den meisten Fällen ein Framework gewählt, welches die Möglichkeit bietet, alle Eigenschaften einer Webseite zu erstellen (HTML für die Struktur, CSS für das Aussehen, JavaScript für Funktionalität). Mittels dem MVC-Konzept \cite{MELD.CH3-web-app.js4} wird dem Entwickler des Systems die Arbeit leichter gemacht.
 
 \begin{table}[!htb]
 \centering
@@ -82,11 +79,12 @@ Die folgenden Frameworks und Libaries wurden in Betracht gezogen. Letzendlich ha
 \caption{Angular 2.0 - \url{https://angular.io/}}
 \end{table}
 
-\textbf{Angular 2.0} ist ein Framework, welches dabei helfen soll, Client Applikationen in HTML und JavaScript zu entwickeln. Das Framework an sich besteht aus mehreren kooperierenden Libaries. Für die Erstellung einer Angular Applikation muss man so gennante HTML \textit{templates} im Angular-Stil, einige \textit{component} Klassen welche die templates managen, und die Logik hinter der Applikation in so gennanten \textit{services}, schreiben \cite{MELD.CH3-web-app.angular}.
+\textbf{Angular 2.0} ist ein Framework, welches dabei helfen soll, Client Applikationen in HTML und JavaScript zu entwickeln. Das Framework an sich besteht aus mehreren kooperierenden Libaries. Für die Erstellung einer Angular Applikation müssen so gennante HTML \textit{templates} im Angular-Stil erstellt werden, einige \textit{component} Klassen welche die templates managen dazu einbinden, und die Logik hinter der Applikation in so gennanten \textit{services}, beschreiben \cite{MELD.CH3-web-app.angular}. Für eine Beschreibung zur Architektur, siehe Abbildung \ref{fig:angulararch}
 
 \begin{figure}[!htb]\centering
 	\includegraphics[width=0.8\textwidth]{images/angular}
 	\caption{Angular Architektur \cite{MELD.CH3-web-app.angular}}
+	\label{fig:angulararch}
 \end{figure}
 
 
